// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Select component renders correctly 1`] = `
<div>
  <div
    class="p-3 space-y-4 border"
    id="Test"
  >
    <h2
      class="text-3xl md:text-5xl text-blue-700 font-bold"
    >
      test
    </h2>
    <hr />
    <div
      class="text-lg text-gray-700"
    >
      test
    </div>
    <div
      class="space-y-4"
    >
      <ul>
        <li>
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="/en/Test"
          >
            English
             home page
          </a>
        </li>
        <li>
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="/cy/Test"
          >
            Cymraeg
             home page
          </a>
        </li>
        <li>
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="/api/test-embed?origin=https%3A%2F%2Fmoneyhelper.org.uk&language=en&name=Test&externalTool=false"
          >
            English
             Example page
          </a>
        </li>
        <li>
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="/api/test-embed?origin=https%3A%2F%2Fmoneyhelper.org.uk&language=cy&name=Test&externalTool=false"
          >
            Cymraeg
             Example page
          </a>
        </li>
      </ul>
      <div
        class="border shadow"
      >
        <div
          class="px-3 py-2 border-b"
        >
          <div>
            <label
              class="block mb-1 text-lg font-bold text-gray-700"
              for="_r_0_"
            >
              1. Choose a language
            </label>
            <div
              class="max-w-sm"
            >
              <div
                class="relative block focus-within:rounded focus-within:ring-[3px] focus-within:ring-yellow-400 focus-within:ring-offset-4 focus-within:ring-offset-blue-700"
              >
                <span
                  class="absolute inset-y-0 right-0 flex items-center w-10 pl-1 pr-1 text-white bg-magenta-500 rounded-r pointer-events-none print:hidden shadow-bottom-gray focus:shadow-none"
                >
                  <svgr-mock
                    class="h-full"
                  />
                </span>
                <select
                  class="border-gray-400 border-y border-l print:p-1 text-gray-500 appearance-none w-full block text-md h-10 pl-3 pr-12 bg-white rounded tool-dd outline-none focus:outline-none focus:border-white"
                  data-testid="language-select"
                  id="_r_0_"
                  name="language"
                >
                  <option
                    value="en"
                  >
                    English
                  </option>
                  <option
                    value="cy"
                  >
                    Cymraeg
                  </option>
                </select>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="px-3 py-4 text-lg font-bold text-gray-700"
          >
            2. Copy the code below and paste it in your HTML.
          </div>
          <code>
            <pre
              class="prism-code language-jsx p-3 overflow-scroll"
              style="color: rgb(57, 58, 52); background-color: rgb(246, 248, 250);"
            >
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &lt;
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                  script
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                   
                </span>
                <span
                  class="token tag attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  src
                </span>
                <span
                  class="token tag attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag attr-value"
                  style="color: rgb(227, 17, 108);"
                >
                  https://moneyhelper.org.uk/api/embed
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &gt;
                </span>
                <span
                  class="token plain-text"
                />
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &lt;/
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                  script
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &gt;
                </span>
                <span
                  class="token plain"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token plain"
                >
                      
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &lt;
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                  div
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                   
                </span>
                <span
                  class="token tag attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  class
                </span>
                <span
                  class="token tag attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag attr-value"
                  style="color: rgb(227, 17, 108);"
                >
                  mas-iframe-container
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  style
                </span>
                <span
                  class="token tag special-attr attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag special-attr attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  width
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  100
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css unit"
                  style="color: rgb(227, 17, 108);"
                >
                  %
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  overflow
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   hidden
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  padding-top
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  66.66
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css unit"
                  style="color: rgb(227, 17, 108);"
                >
                  %
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  position
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   relative
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &gt;
                </span>
                <span
                  class="token plain-text"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token plain-text"
                >
                        
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &lt;
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                  iframe
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                          
                </span>
                <span
                  class="token tag attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  class
                </span>
                <span
                  class="token tag attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag attr-value"
                  style="color: rgb(227, 17, 108);"
                >
                  mas-iframe
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                          
                </span>
                <span
                  class="token tag special-attr attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  style
                </span>
                <span
                  class="token tag special-attr attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag special-attr attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  width
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  100
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css unit"
                  style="color: rgb(227, 17, 108);"
                >
                  %
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  height
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  100
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css unit"
                  style="color: rgb(227, 17, 108);"
                >
                  %
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  left
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  0
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  position
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   absolute
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  top
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  0
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  border
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  0
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                          
                </span>
                <span
                  class="token tag attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  src
                </span>
                <span
                  class="token tag attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag attr-value"
                  style="color: rgb(227, 17, 108);"
                >
                  https://moneyhelper.org.uk/en/Test?isEmbedded=true
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                          
                </span>
                <span
                  class="token tag attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  loading
                </span>
                <span
                  class="token tag attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag attr-value"
                  style="color: rgb(227, 17, 108);"
                >
                  lazy
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                        
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &gt;
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &lt;/
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                  iframe
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &gt;
                </span>
                <span
                  class="token plain-text"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token plain-text"
                >
                      
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &lt;/
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                  div
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &gt;
                </span>
              </div>
            </pre>
          </code>
          <div
            class="flex items-center gap-3 p-3"
          >
            <button
              class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button text-lg"
              data-testid="copy-embed"
              type="submit"
            >
              <span />
              Copy to clipboard
              <span />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select component renders correctly 2`] = `
<div>
  <div
    class="p-3 space-y-4 border"
    id="Test"
  >
    <h2
      class="text-3xl md:text-5xl text-blue-700 font-bold"
    >
      test
    </h2>
    <hr />
    <div
      class="text-lg text-gray-700"
    >
      test
    </div>
    <div
      class="space-y-4"
    >
      <ul>
        <li>
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="/en/Test"
          >
            English
             home page
          </a>
        </li>
        <li>
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="/cy/Test"
          >
            Cymraeg
             home page
          </a>
        </li>
        <li>
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="/api/test-embed?origin=https%3A%2F%2Fmoneyhelper.org.uk&language=en&name=Test&externalTool=false"
          >
            English
             Example page
          </a>
        </li>
        <li>
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="/api/test-embed?origin=https%3A%2F%2Fmoneyhelper.org.uk&language=cy&name=Test&externalTool=false"
          >
            Cymraeg
             Example page
          </a>
        </li>
      </ul>
      <div
        class="border shadow"
      >
        <div
          class="px-3 py-2 border-b"
        >
          <div>
            <label
              class="block mb-1 text-lg font-bold text-gray-700"
              for="_r_1_"
            >
              1. Choose a language
            </label>
            <div
              class="max-w-sm"
            >
              <div
                class="relative block focus-within:rounded focus-within:ring-[3px] focus-within:ring-yellow-400 focus-within:ring-offset-4 focus-within:ring-offset-blue-700"
              >
                <span
                  class="absolute inset-y-0 right-0 flex items-center w-10 pl-1 pr-1 text-white bg-magenta-500 rounded-r pointer-events-none print:hidden shadow-bottom-gray focus:shadow-none"
                >
                  <svgr-mock
                    class="h-full"
                  />
                </span>
                <select
                  class="border-gray-400 border-y border-l print:p-1 text-gray-500 appearance-none w-full block text-md h-10 pl-3 pr-12 bg-white rounded tool-dd outline-none focus:outline-none focus:border-white"
                  data-testid="language-select"
                  id="_r_1_"
                  name="language"
                >
                  <option
                    value="en"
                  >
                    English
                  </option>
                  <option
                    value="cy"
                  >
                    Cymraeg
                  </option>
                </select>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="px-3 py-4 text-lg font-bold text-gray-700"
          >
            2. Copy the code below and paste it in your HTML.
          </div>
          <code>
            <pre
              class="prism-code language-jsx p-3 overflow-scroll"
              style="color: rgb(57, 58, 52); background-color: rgb(246, 248, 250);"
            >
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &lt;
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                  script
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                   
                </span>
                <span
                  class="token tag attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  src
                </span>
                <span
                  class="token tag attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag attr-value"
                  style="color: rgb(227, 17, 108);"
                >
                  https://moneyhelper.org.uk/api/embed
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &gt;
                </span>
                <span
                  class="token plain-text"
                />
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &lt;/
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                  script
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &gt;
                </span>
                <span
                  class="token plain"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token plain"
                >
                      
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &lt;
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                  div
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                   
                </span>
                <span
                  class="token tag attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  class
                </span>
                <span
                  class="token tag attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag attr-value"
                  style="color: rgb(227, 17, 108);"
                >
                  mas-iframe-container
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  style
                </span>
                <span
                  class="token tag special-attr attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag special-attr attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  width
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  100
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css unit"
                  style="color: rgb(227, 17, 108);"
                >
                  %
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  overflow
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   hidden
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  padding-top
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  66.66
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css unit"
                  style="color: rgb(227, 17, 108);"
                >
                  %
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  position
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   relative
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &gt;
                </span>
                <span
                  class="token plain-text"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token plain-text"
                >
                        
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &lt;
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                  iframe
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                          
                </span>
                <span
                  class="token tag attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  class
                </span>
                <span
                  class="token tag attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag attr-value"
                  style="color: rgb(227, 17, 108);"
                >
                  mas-iframe
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                          
                </span>
                <span
                  class="token tag special-attr attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  style
                </span>
                <span
                  class="token tag special-attr attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag special-attr attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  width
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  100
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css unit"
                  style="color: rgb(227, 17, 108);"
                >
                  %
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  height
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  100
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css unit"
                  style="color: rgb(227, 17, 108);"
                >
                  %
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  left
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  0
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  position
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   absolute
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  top
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  0
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css property"
                  style="color: rgb(54, 172, 170);"
                >
                  border
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  :
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css"
                  style="color: rgb(227, 17, 108);"
                >
                   
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css number"
                  style="color: rgb(54, 172, 170);"
                >
                  0
                </span>
                <span
                  class="token tag special-attr attr-value value css language-css punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  ;
                </span>
                <span
                  class="token tag special-attr attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                          
                </span>
                <span
                  class="token tag attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  src
                </span>
                <span
                  class="token tag attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag attr-value"
                  style="color: rgb(227, 17, 108);"
                >
                  https://moneyhelper.org.uk/en/Test?isEmbedded=true
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                          
                </span>
                <span
                  class="token tag attr-name"
                  style="color: rgb(0, 164, 219);"
                >
                  loading
                </span>
                <span
                  class="token tag attr-value punctuation attr-equals"
                  style="color: rgb(57, 58, 52);"
                >
                  =
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag attr-value"
                  style="color: rgb(227, 17, 108);"
                >
                  lazy
                </span>
                <span
                  class="token tag attr-value punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  "
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                        
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &gt;
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &lt;/
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                  iframe
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &gt;
                </span>
                <span
                  class="token plain-text"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token plain-text"
                >
                      
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &lt;/
                </span>
                <span
                  class="token tag"
                  style="color: rgb(0, 0, 159);"
                >
                  div
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(57, 58, 52);"
                >
                  &gt;
                </span>
              </div>
            </pre>
          </code>
          <div
            class="flex items-center gap-3 p-3"
          >
            <button
              class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button text-lg"
              data-testid="copy-embed"
              type="submit"
            >
              <span />
              Copy to clipboard
              <span />
            </button>
            <div
              class="text-lg font-bold text-gray-900 animate-bounce"
            >
              Done!
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select component renders external tool correctly 1`] = `
<div>
  <div
    class="p-3 space-y-4 border"
    id="Test"
  >
    <h2
      class="text-3xl md:text-5xl text-blue-700 font-bold"
    >
      test
    </h2>
    <hr />
    <div
      class="text-lg text-gray-700"
    >
      test
    </div>
    <div
      class="space-y-4"
    >
      <ul>
        <li>
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="test"
          >
            English
             home page
          </a>
        </li>
        <li>
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="test"
          >
            Cymraeg
             home page
          </a>
        </li>
        <li>
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="/api/test-embed?origin=https%3A%2F%2Fmoneyhelper.org.uk&language=en&name=Test&externalTool=true"
          >
            English
             Example page
          </a>
        </li>
        <li>
          <a
            class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
            href="/api/test-embed?origin=https%3A%2F%2Fmoneyhelper.org.uk&language=cy&name=Test&externalTool=true"
          >
            Cymraeg
             Example page
          </a>
        </li>
      </ul>
      <div
        class="border shadow"
      >
        <div
          class="px-3 py-2 border-b"
        >
          <div>
            <label
              class="block mb-1 text-lg font-bold text-gray-700"
              for="_r_2_"
            >
              1. Choose a language
            </label>
            <div
              class="max-w-sm"
            >
              <div
                class="relative block focus-within:rounded focus-within:ring-[3px] focus-within:ring-yellow-400 focus-within:ring-offset-4 focus-within:ring-offset-blue-700"
              >
                <span
                  class="absolute inset-y-0 right-0 flex items-center w-10 pl-1 pr-1 text-white bg-magenta-500 rounded-r pointer-events-none print:hidden shadow-bottom-gray focus:shadow-none"
                >
                  <svgr-mock
                    class="h-full"
                  />
                </span>
                <select
                  class="border-gray-400 border-y border-l print:p-1 text-gray-500 appearance-none w-full block text-md h-10 pl-3 pr-12 bg-white rounded tool-dd outline-none focus:outline-none focus:border-white"
                  data-testid="language-select"
                  id="_r_2_"
                  name="language"
                >
                  <option
                    value="en"
                  >
                    English
                  </option>
                  <option
                    value="cy"
                  >
                    Cymraeg
                  </option>
                </select>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="px-3 py-4 text-lg font-bold text-gray-700"
          >
            2. Copy the code below and paste it in your HTML.
          </div>
          <code>
            <pre
              class="prism-code language-jsx p-3 overflow-scroll"
              style="color: rgb(57, 58, 52); background-color: rgb(246, 248, 250);"
            >
              <div
                class="token-line"
                style="color: rgb(57, 58, 52);"
              >
                <span
                  class="token plain"
                >
                  test
                </span>
              </div>
            </pre>
          </code>
          <div
            class="flex items-center gap-3 p-3"
          >
            <button
              class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button text-lg"
              data-testid="copy-embed"
              type="submit"
            >
              <span />
              Copy to clipboard
              <span />
            </button>
            <div
              class="text-lg font-bold text-gray-900 animate-bounce"
            >
              Done!
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
